<?xml version="1.0"?>
<package format="2">
  <name>jsk_imu_mini_demo</name>
  <version>0.0.0</version>
  <description>The jsk_imu_mini_demo package</description>

  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>jsk_imu_mini_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>jsk_imu_mini_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>jsk_imu_mini_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>

  </export>
</package>
