<?xml version="1.0"?>
<package format="2">
  <name>jsk_imu_mini_firmware</name>
  <version>0.0.0</version>
  <description>The jsk_imu_mini_firmware package</description>

  <maintainer email="sktometometo@todo.todo">sktometometo</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>jsk_imu_mini_msgs</build_depend>
  <build_depend>rosserial_client</build_depend>


  <export>

  </export>
</package>
