<package>
  <name>jsk_imu_mini_msgs</name>
  <version>0.1.2</version>
  <description>Messages for jsk imu mini</description>
  <author email="kawaharazuka@jsk.imi.i.u-tokyo.ac.jp">Kento Kawaharazuka</author>

  <maintainer email="kawaharazuka@jsk.imi.i.u-tokyo.ac.jp">Kento Kawaharazuka</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/jsk_imu_mini_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
